--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ pytest = "*"
 
 [packages]
 flask = "*"
+flask-sqlalchemy = "*"
 flask-marshmallow = "*"
 marshmallow = "*"
 marshmallow-sqlalchemy = "*"
@@ -28,6 +29,7 @@ oauth2client = "*"
 pyopenssl = "*"
 arrow = "*"
 numpy = "*"
+flask-socketio = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.7.5"
