--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\geobo\\.virtualenvs\\Workout_web-Isg9SYOv\\Scripts\\python.exe"
+    "python.pythonPath": "/Users/eojinchoi/.local/share/virtualenvs/Workout_web-wvzSiD8y/bin/python"
 }
